[package]
name = "futures-signals"
version = "0.3.18"
authors = ["Pauan <pcxunlimited@gmail.com>"]
description = "Zero cost FRP signals using the futures crate"
repository = "https://github.com/Pauan/rust-signals"
homepage = "https://github.com/Pauan/rust-signals"
readme = "README.md"
license = "MIT"
keywords = ["signal", "reactive", "frp", "futures"]
categories = ["asynchronous", "concurrency", "data-structures"]
edition = "2018"

[dependencies]
futures-core = "0.3.0"
futures-channel = "0.3.0"
futures-util = "0.3.0"
discard = "1.0.3"
# TODO make this optional
serde = "1.0.98"
pin-project = "1.0.2"

[dev-dependencies]
futures = "0.3.0"
futures-executor = "0.3.0"
pin-utils = "0.1.0"
