[package]
name = "futures-signals"
version = "0.3.33"
authors = ["Pauan <pcxunlimited@gmail.com>"]
description = "Zero cost FRP signals using the futures crate"
repository = "https://github.com/Pauan/rust-signals"
homepage = "https://github.com/Pauan/rust-signals"
readme = "README.md"
license = "MIT"
keywords = ["signal", "reactive", "frp", "futures"]
categories = ["asynchronous", "concurrency", "data-structures"]
edition = "2018"

[features]
default = ["debug", "serde"]
debug = ["log"]

[dependencies]
futures-core = "0.3.0"
futures-channel = "0.3.0"
futures-util = "0.3.0"
discard = "1.0.3"
pin-project = "1.0.2"
gensym = "0.1.0"

[dependencies.log]
version = "0.4.14"
optional = true

[dependencies.serde]
version = "1.0.140"
optional = true
features = ["derive"]

[dev-dependencies]
futures-executor = "0.3.0"
pin-utils = "0.1.0"
once_cell = "1.10.0"
indoc = "2.0.1"
criterion = { version = "0.4.0", features = [] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "channel"
harness = false
